--- a/public/checkUrl.html
+++ b/public/checkUrl.html
@@ -3,31 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>URL Shortener</title>
+    <title>Check URL — URL Shortener</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="m-4 mb-1">Check URL</h1>
-    <p id="info">Check where short URLs lead</p>
+    <header>
+        <div class="header-content">
+            <a href="index.html" class="logo">URL Shortener</a>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="index.html">Shorten</a></li>
+                    <li><a href="myUrls.html">My URLs</a></li>
+                    <li><a href="checkUrl.html" class="active">Check URL</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-    <form id="form" autocomplete="off">
-        <label class="mb-2" for="urlInput">Shortened URL:</label>
-        <br>
-        <input class="mb-4" type="text" placeholder="e.g. /dir/abc123" id="urlInput" name="urlInput">
-        <br>
-        <button class="btn btn-primary btn-lg m-2" type="submit">Check URL</button>
-    </form>
+    <main>
+        <h1>Check URL</h1>
+        <p id="info">See where a short URL leads before clicking</p>
 
-    <a id="linkATag"><h1 id="display"></h1></a>
-    <button class="btn btn-outline-primary m-1" id="copyLink">🗒️ Copy Original Link</button>
+        <form id="form" autocomplete="off">
+            <label for="urlInput">Enter shortened URL</label>
+            <input type="text" placeholder="e.g. /dir/abc123" id="urlInput" name="urlInput">
+            <button class="btn btn-primary btn-lg mt-3" type="submit">Check URL</button>
+        </form>
+
+        <div class="result-box">
+            <a id="linkATag"><p id="display"></p></a>
+            <button class="btn btn-outline-primary" id="copyLink">Copy Original Link</button>
+        </div>
+    </main>
     
-    <nav class="bottom-nav">
-        <button id="nav-item1" onclick="window.location.href='index.html'" class="nav-item"><p>URL Shortener</p></button> 
-        <button id="nav-item2" onclick="window.location.href='myUrls.html'" class="nav-item"><p>My URLs</p></button>
-        <button id="nav-item3" onclick="window.location.href='checkUrl.html'" class="nav-item"><p>Check URL</p></button>
-    </nav>
-
     <script src="script.js"></script>
 </body>
 </html>
