--- a/public/index.html
+++ b/public/index.html
@@ -8,31 +8,40 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="m-4 mb-1">URL Shortener</h1>
-    <p id="info">Create short URLs</p>
+    <header>
+        <div class="header-content">
+            <a href="index.html" class="logo">URL Shortener</a>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="index.html" class="active">Shorten</a></li>
+                    <li><a href="myUrls.html">My URLs</a></li>
+                    <li><a href="checkUrl.html">Check URL</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-    <form id="form" autocomplete="off">
-        <label class="mb-2" for="urlInput">Original URL:</label>
-        <br>
-        <input class="mb-4" type="text" placeholder="e.g. youtube.com" id="urlInput" name="urlInput">
-        <br>
-        <button class="btn btn-primary btn-lg m-2" type="submit" id="createUrlBtn">Create URL</button>
-    </form>
+    <main>
+        <h1>Shorten your link</h1>
+        <p id="info">Create short URLs that are easy to share</p>
 
-    <a id="linkATag"><h1 id="display"></h1></a>
-    <button class="btn btn-outline-primary m-1" id="copyLink">🗒️ Copy Link</button>
-    
-    <p id="warningSymbol">⚠️</p>
-    <p id="warningText">
-        Link will only be shown once.
-        You can keep track of your URLs under the My URLs section of our site.
-    </p>
+        <form id="form" autocomplete="off">
+            <label for="urlInput">Enter your long URL</label>
+            <input type="text" placeholder="e.g. youtube.com" id="urlInput" name="urlInput">
+            <button class="btn btn-primary btn-lg mt-3" type="submit" id="createUrlBtn">Shorten URL</button>
+        </form>
 
-    <nav class="bottom-nav">
-        <button id="nav-item1" onclick="window.location.href='index.html'" class="nav-item"><p>URL Shortener</p></button> 
-        <button id="nav-item2" onclick="window.location.href='myUrls.html'" class="nav-item"><p>My URLs</p></button>
-        <button id="nav-item3" onclick="window.location.href='checkUrl.html'" class="nav-item"><p>Check URL</p></button>
-    </nav>
+        <div class="result-box">
+            <a id="linkATag"><p id="display"></p></a>
+            <button class="btn btn-outline-primary" id="copyLink">Copy Link</button>
+        </div>
+        
+        <p id="warningSymbol">⚠️</p>
+        <p id="warningText">
+            Link will only be shown once.
+            You can keep track of your URLs under the My URLs section of our site.
+        </p>
+    </main>
 
     <script src="script.js"></script>
 </body>
